--- a/kubernetes/eks-cluster.yml
+++ b/kubernetes/eks-cluster.yml
@@ -8,63 +8,47 @@ Parameters:
         Type: String
 
 Resources:
+  
+  eksServiceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - eks.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
+        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
+
   EKSCluster:
     Type: 'AWS::EKS::Cluster'
     Properties:
       Name: capstone-eks-cluster
       Version: '1.14'
-      RoleArn: 
+      RoleArn: !GetAtt eksServiceRole.Arn
       ResourcesVpcConfig:
-        SecurityGroupIds:
-          - Fn::ImportValue: !Sub ${StackName}-SG
+        SecurityGroupIds: 
+          - Fn::ImportValue: !Sub ${StackName}-CPSG
         SubnetIds:
           - Fn::ImportValue: !Sub "${StackName}-PUB1-SN"
           - Fn::ImportValue: !Sub "${StackName}-PUB2-SN"
           - Fn::ImportValue: !Sub "${StackName}-PRI1-SN"
           - Fn::ImportValue: !Sub "${StackName}-PRI2-SN"
-  
-          NodeInstanceRole:
-            Type: "AWS::IAM::Role"
-            Properties:
-              AssumeRolePolicyDocument:
-                Version: "2012-10-17"
-                Statement:
-                  - Effect: Allow
-                    Principal:
-                      Service:
-                        - !FindInMap [ServicePrincipals, !Ref "AWS::Partition", ec2]
-                    Action:
-                      - "sts:AssumeRole"
-              ManagedPolicyArns:
-                - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSWorkerNodePolicy"
-                - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKS_CNI_Policy"
-                - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
-              Path: /
-    
-  EKSNodeGroup:
-    Type: 'AWS::EKS::Nodegroup'
-    Properties:
-      ClusterName: capstone-eks-cluster
-      NodeRole: 'arn:aws:iam::012345678910:role/eksInstanceRole'
-      ScalingConfig:
-        MinSize: 1
-        DesiredSize: 2
-        MaxSize: 3
-      Labels:
-        Key1: Value1
-        Key2: Value2
-      Subnets:
-        - subnet-6782e71e
-        - subnet-e7e761ac
 
-          
 Outputs:
+  eksServiceRole:
+    Description: The node instance role
+    Value: !GetAtt eksServiceRole.Arn
+    Export:
+        Name: !Sub ${StackName}-eksServiceRole
+
   EKSCluster: 
     Description: EKS Cluster ID
     Value: !Ref EKSCluster
     Export: 
-      Name: !Sub ${StackName}-EKSCluster
-  
-  NodeInstanceRole:
-    Description: The node instance role
-    Value: !GetAtt NodeInstanceRole.Arn
+        Name: !Sub ${StackName}-EKSCluster
