--- a/kubernetes/config/eks-auth-cm.yml
+++ b/kubernetes/config/eks-auth-cm.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
- name: eks-auth
+ name: aws-auth
  namespace: kube-system
 data:
  mapRoles: |
-   - rolearn:  arn:aws:iam::090508598589:role/eks-worker-stack-NodeInstanceRole-1XB2SMH7ZVHHB
+   - rolearn:  arn:aws:iam::090508598589:role/eks-worker-stack-NodeInstanceRole-OUM6CAXQZVIG
      username: system:node:{{EC2PrivateDNSName}}
      groups:
        - system:bootstrappers
